--- a/src/Shared/Header/Header.css
+++ b/src/Shared/Header/Header.css
@@ -1,11 +1,15 @@
 .nav-link {
   color: #fff !important;
 }
+.nav-link a{
+text-decoration: none;
+color: #fff;
+}
 .dropdown:hover > .dropdown-menu {
   display: block;
 }
 
-  .right-space a,.nav-item a {
+.right-space a,.nav-item a {
   font-size: 13px;
   font-weight: 700;
   text-transform: uppercase;
