--- a/src/Pages/Dropdown/About/Welcome/Welcome.css
+++ b/src/Pages/Dropdown/About/Welcome/Welcome.css
@@ -1,7 +1,7 @@
 .welcome-box .main-box {
   border: 3px solid #104788;
   box-shadow: 0px 0px 15px 5px rgb(16, 82, 163);
-  background: #fff;
+  background: #F0F0F0;
 }
 hr {
   color: #ecb200;
